<resources>
    <string name="app_name">News Hunter</string>
    <string name="image_description">image will be updated with content from the news feed</string>
    <string name="app_heading">Latest News Available</string>
    <string name="menu_search">Search</string>
    <string name="menu_setting">About Us</string>
    <string name="search_hint">Enter News Tags</string>
    <string name="btn_txt">Read More</string>
    <string name="business_news">Business News</string>
    <string name="wall_street_news">Wall Street News</string>
    <string name="tech_news">Tech News</string>
    <string name="home_news">Home Page</string>
    <string name="refresh">Refresh</string>
    <string name="log_out">Sign Out</string>
    <string name="enter_password">Enter A Password</string>
    <string name="enter_email">Enter Email Here</string>
    <string name="sign_up">sign up</string>
    <string name="login">login</string>
    <string name="take_notes">Take Notes</string>
    <string name="show_notes">Saved Notes</string>
    <string name="add_note">Add A Note</string>
    <string name="thnx">Special Thanks to \'NewsApi.org\' for providing FREE API USAGE.\nClick to know more</string>
    <string name="developers">DEVELOPERS</string>
    <string name="suggestions">SUGGESTIONS</string>
    <string name="make_a_note">Wanna Make a Note ?</string>
    <string name="save">Save</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate Us</string>
    <string name="forgot_password">Forgot Password ? </string>
    <string name="send">Send</string>
    <string name="enter_email_id">Please enter your Email ID to get a verification code</string>
    <string name="login_with_phone">Login With Phone, Here</string>
    <string name="get_code">Get Code</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="or">OR</string>
    <string name="bookmarks">bookmarks</string>

    <string name="app_ID">ca-app-pub-5073642246912223~4760700455</string>
    <string name="BANNER_ID">ca-app-pub-5073642246912223/6350551083</string>
    <string name="edit_note">Edit Note</string>
    <string name="title">Title :</string>
    <string name="description">Description :</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="book_marks">Book Marks</string>
    <string name="default_notification_channel_id">default</string>
    <string name="powered_by">Powered By :</string>
    <string name="small_layout">Smaller Tabs</string>
    <string name="save_offline">Save Page Offline</string>
    <string name="load_saved_pages">Load Saved Pages</string>
</resources>
