<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/menu_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/bookmarks"
        android:icon="@drawable/bookmark"
        android:title="@string/add_note"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/settings"
        android:title="@string/menu_setting"
        app:showAsAction="never" />

    <item
        android:id="@+id/logout"
        android:title="@string/log_out"
        app:showAsAction="never" />


</menu>