<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    tools:context="kushal.application.newshunter.SplashScreen">

    <ImageView
        android:id="@+id/iv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="60dp"
        android:contentDescription="@string/image_description"
        android:src="@drawable/logo_red" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cbLogo"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/powered_by"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/cbLogo"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/description"
        android:src="@drawable/cb_logo" />

</RelativeLayout>