<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0E0E0"
    android:fitsSystemWindows="true"
    android:keepScreenOn="true">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary" />

        <!--        no data animation-->
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/network"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:padding="100dp"
            android:visibility="gone"
            app:lottie_autoPlay="true"
            app:lottie_loop="false"
            app:lottie_rawRes="@raw/internet"
            tools:ignore="RtlSymmetry" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:overScrollMode="never" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/navBar"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/colorPrimaryTransparent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nav_tv"
            android:layout_width="241dp"
            android:layout_height="?actionBarSize"
            android:background="@drawable/drawer_tv"
            android:gravity="center"
            android:text="@string/home_news"
            android:textColor="@color/colorBlack"
            android:textSize="25sp" />

        <Button
            android:id="@+id/home"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_nav_btn"
            android:text="@string/home_news" />

        <Button
            android:id="@+id/business"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_nav_btn"
            android:text="@string/business_news" />

        <Button
            android:id="@+id/wsj"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_nav_btn"
            android:text="@string/wall_street_news" />

        <Button
            android:id="@+id/tech"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_nav_btn"
            android:text="@string/tech_news" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="22dp"
            android:gravity="start"
            android:text="@string/make_a_note"
            android:textColor="@color/colorBlack"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="22dp"
            android:background="@drawable/seperator_subtle" />

        <Button
            android:id="@+id/notes"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/bg_nav_btn"
            android:text="@string/take_notes" />

        <Button
            android:id="@+id/show_notes"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_nav_btn"
            android:text="@string/show_notes" />

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>