<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEFEF"
    android:isScrollContainer="true"
    tools:context="kushal.application.newshunter.NotesAct">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="true"
        android:overScrollMode="never"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:text="@string/edit_note"
                android:textColor="@color/colorBlack"
                android:textSize="32sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="20dp"
                android:shadowColor="@color/colorBlack"
                android:text="@string/title"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/big_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="-8dp"
                android:layout_marginEnd="16dp"
                android:focusable="auto"
                android:hint="Enter Title Here (required)"
                android:importantForAutofill="no"
                android:textColor="@color/colorBlack"
                android:textColorHint="#555"
                android:textSize="22sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:text="@string/description"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/big_notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="-8dp"
                    android:layout_marginEnd="16dp"
                    android:focusable="auto"
                    android:hint="Enter Text Briefly (optional)"
                    android:importantForAutofill="no"
                    android:textColorHint="#555"
                    android:textSize="18sp"
                    tools:ignore="HardcodedText" />

            </androidx.core.widget.NestedScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/update"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="34dp"
                    android:layout_marginTop="80dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_nav_btn"
                    android:text="@string/update"
                    android:textSize="16sp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/delete"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/delete"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="54dp"
                    android:layout_marginTop="80dp"
                    android:layout_marginEnd="34dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_nav_btn"
                    android:text="@string/delete"
                    android:textSize="16sp"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        app:adSize="BANNER"
        app:adUnitId="@string/BANNER_ID"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>