<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg"
    android:orientation="vertical"
    tools:context="kushal.application.newshunter.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:paddingBottom="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:contentDescription="@string/image_description"
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="28dp"
            android:src="@drawable/spalsh_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_nav_btn"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/email"
                    android:contentDescription="@string/image_description" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="40dp"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    android:importantForAutofill="no" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/password"
                    android:contentDescription="@string/image_description" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:importantForAutofill="no" />

                <ImageButton
                    android:id="@+id/eye"
                    android:layout_width="40dp"
                    android:layout_marginEnd="4dp"
                    android:layout_height="40dp"
                    android:background="#FFEBEE"
                    android:src="@drawable/eye"
                    android:contentDescription="@string/image_description" />

            </LinearLayout>

            <TextView
                android:id="@+id/forgot"
                android:textStyle="italic"
                android:textSize="16sp"
                android:gravity="end"
                android:textColor="#444"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="40dp"
                android:text="@string/forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <Button
            android:id="@+id/signup"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/bg_nav_btn"
            android:text="@string/sign_up"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <Button
            android:id="@+id/login"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/bg_nav_btn"
            android:text="@string/login"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>